--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,9 @@ h1, .title span {
 }
 
 h1 {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
 	align-self: flex-start;
 	margin-bottom: 1.3rem;
 }
@@ -156,7 +159,7 @@ h1 {
 	justify-content: center;
 	color: white;
 	display: flex;
-	width: 50%;
+	width: 45%;
 	/*padding-top: 15px;
 	padding-bottom: 15px;*/
 	box-sizing: border-box;
@@ -221,9 +224,9 @@ h1 {
 	text-transform: uppercase;
 	margin-top: 115px;
 	margin-left: auto;
-	margin-right: 250px;
 	box-sizing: border-box;
 	margin-bottom: 0;
+	width: 45%
 }
 
 @media (min-width: 641px) and (max-width: 960px) {
@@ -508,6 +511,7 @@ p {
 	background: #543aa1;
 	display: flex;
 	border-radius: 20px;
+	margin-top: auto;
 }
 
 .logo svg {
@@ -517,18 +521,31 @@ p {
 }
 
 .text_footer {
+	display: flex;
+	flex-direction: column;
 	margin-top: 2rem;
 	margin-bottom: 2rem;
 	margin-left: 35px;
 }
 
-.footer h1 {
+.footer h2 {
 	margin-bottom: 0;
+	text-transform: uppercase;
+    color: white;
+    font-size: 90px;
+    font-weight: 700;
+    box-sizing: border-box;
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	align-self: flex-start;
+	margin-bottom: 1.3rem;
 }
+
 
 .footer p {
 	font-size: 30px;
-	color: #a496cgita;
+	color: #a496ca;
 	text-transform: uppercase;
 	font-weight: 400;
 	margin-top: 0;
