--- a/css/main.css
+++ b/css/main.css
@@ -191,7 +191,7 @@ h1 {
 	bottom: -1rem;
 }
 
-@media (min-width: 641px) and (max-width: 960px) {
+/*@media (min-width: 641px) and (max-width: 960px) {
 .athlets::before {
 	content: "";
 	position: absolute;
@@ -201,20 +201,21 @@ h1 {
     height: 755px;
     width: 120%;
   }
-}
+}*/
 
 @media (min-width: 961px) {
-.athlets::before {
-	content: "";
+.athlets_pic {
+	/*content: "";*/
 	position: absolute;
-	z-index: 1;
-	background-image: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_566.png");
+	
+	/*background-image: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_566.png");
     background-repeat: no-repeat;
-    left: 215px;
+    left: 215px;*/
     height: 940px;
-    width: 40%;
+    width: 50%;
   }
 }
+
 
 .athlets h2 {
 	font-size: 80px;
@@ -360,16 +361,17 @@ p {
 	background-color: #ffffff;
 }
 
-.players::after {
+.players_pic {
 	position: absolute;
-	z-index: 1;
+	/*z-index: 1;
 	content: "";
 	background: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/basketballer_991.png");
-	width: 100%;
-	height: 820px;
-	right: 0;
 	background-repeat: no-repeat;
-	background-position: right;
+	background-position: right;*/
+	width: 50%;
+	height: 940px;
+	right: 0;
+	
 
 }
 
@@ -384,15 +386,20 @@ p {
 	display: flex;
 	flex-direction: row;
 	width: 100%;
+	position: relative;
 
 }
 
 .be_active_pic {
-	background-image: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/be-active_1024.jpg");
+	/*background-image: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/be-active_1024.jpg");
 	background-repeat: no-repeat;
 	/*background-position: left;*/
-	width: 50%;
+	width: 100%;
 	min-height: 730px;
+}
+
+.be_active_pic picture, .be_active_pic img {
+	width: 100%;
 }
 
 .number {
@@ -400,12 +407,17 @@ p {
 	width: 8.5rem;
 	height: 7.75rem;
 	margin-top: 10.5rem;
-	margin-left: calc(-8.5rem/2);
+	/*margin-left: calc(-8.5rem/2);*/
 	background-color: #5e42b0;
 	color: #f5f6f7;
 	display: flex;
 	font-weight: 700;
 	z-index: 1;
+	position: absolute;
+    /*width: 40px;
+    height: 40px;*/
+    left: 50%;
+    margin-left: -50px;
 }
 
 .number span {
@@ -430,7 +442,7 @@ p {
 	flex-wrap: wrap;
 	width: 50%;
 	min-height: 730px;
-	margin-left: calc(-8.5rem/2);
+	/*margin-left: calc(-8.5rem/2);*/
 	justify-content: center;
 }
 
@@ -456,7 +468,7 @@ p {
 	background-repeat: no-repeat;
 	width: 50%;
 	min-height: 730px;
-	margin-left: calc(-8.5rem/2);
+	
 }
 
 .work_it_pic {
