--- a/css/main.css
+++ b/css/main.css
@@ -247,22 +247,11 @@ h1 {
 	bottom: -1rem;
 }
 
-/*@media (min-width: 641px) and (max-width: 960px) {
-.athlets::before {
-	content: "";
-	position: absolute;
-	z-index: 1;
-	background-image: url("https://raw.githubusercontent.com/netology-code/mq-diploma/master/sources/img/footballer_497.png");
-    background-repeat: no-repeat;
-    height: 755px;
-    width: 120%;
-  }
-}*/
-
 @media (min-width: 961px) {
 .athlets_pic {
 	position: absolute;
 	width: 50%;
+	left: 0;
   }
 }
 
@@ -276,7 +265,8 @@ h1 {
 	margin-left: auto;
 	box-sizing: border-box;
 	margin-bottom: 0;
-	width: 40%
+	width: 40%;
+	padding: 2rem;
 }
 
 @media (min-width: 641px) and (max-width: 960px) {
@@ -326,6 +316,7 @@ h3 {
 	font-weight: 700;
 	text-transform: uppercase;
     margin: 0;
+    padding: 2rem;
 }
 
 h3 span {
@@ -348,9 +339,9 @@ h3 span::after {
 p {
 	font-size: 1rem;
 	font-weight: 400;
-	align-self: center;
 	margin-top: 1.5rem;
 	margin-bottom: 0;
+	padding: 2rem;
 }
 
 .collaboration {
@@ -385,6 +376,7 @@ p {
 	box-sizing: border-box;
 	margin-bottom: 0;
 	margin-left: 190px;
+	padding: 2rem;
 }
 
 .players article {
@@ -451,6 +443,13 @@ p {
 		margin-top: 4rem;
 		position: relative;
 	}
+	.athlets article, .players article {
+		width: 100%;
+		margin-left: auto;
+	}
+	.players h2 {
+		margin-left: 1rem;
+	}
 }
 
 .next_step {
@@ -511,7 +510,7 @@ p {
     /*width: 40px;
     height: 40px;*/
     left: 50%;
-    margin-left: -50px;
+    margin-left: -77px;
 }
 
 @media (min-width: 641px) and (max-width: 960px) {
@@ -524,6 +523,12 @@ p {
 	}
 }
 
+.number span {
+	margin: auto;	
+    position: relative;
+    margin-top: 3rem;
+}
+
 @media (max-width: 640px) {
 	.number {
 		font-size: 14px;
@@ -532,11 +537,9 @@ p {
 		left: 4rem;
 		top: 11rem;
 	} 
-}
-
-.number span {
-	margin: auto;	
-    position: relative;
+	.number span {
+		margin-top: auto;
+	}
 }
 
 .number span::after {
@@ -547,6 +550,7 @@ p {
 	height: 5px;
 	width: 100%;
 	bottom: -5px;
+	top: 24px;
 }
 
 .be_active article, .work_it article, .find_contact article {
@@ -554,7 +558,7 @@ p {
 	flex-direction: column;
 	flex-wrap: wrap;
 	width: 50%;
-	justify-content: center;
+	/*justify-content: center;*/
 }
 
 @media (min-width: 641px) and (max-width: 960px) {
@@ -569,13 +573,25 @@ p {
 	color: #c1c1c1;
 	font-weight: 700;
 	text-transform: uppercase;
+	padding: 2rem;
+}
+
+.be_active h2 {
+	margin-top: 10.5rem;
+	margin-left: 100px;
+	margin-right: 100px;
 }
 
 .next_step p {
 	font-size: 24px;
 	font-weight: 400;
 	margin: 0 130px;
-	margin-top: 4.5rem;
+	/*margin-top: 4.5rem;*/
+	padding: 1rem;
+}
+
+.be_active {
+	margin-top: 0;
 }
 
 .find_contact_pic {
@@ -591,6 +607,18 @@ p {
 	.find_contact_pic {
 		order: -1;
 	}
+}
+
+.find_contact h2 {
+	margin-top: 10.5rem;
+	margin-left: 20px;
+	margin-right: 20px;
+}
+
+.work_it h2 {
+	margin-top: 10.5rem;
+	margin-left: 100px;
+	margin-right: 20px;
 }
 
 .work_it_pic {
@@ -700,7 +728,6 @@ p {
 	background: #543aa1;
 	display: flex;
 	border-radius: 20px;
-	margin-top: auto;
 }
 
 .logo svg {
@@ -717,17 +744,7 @@ p {
 	margin-left: 35px;
 }
 
-@media (min-width: 641px) and (max-width: 960px) {
-	.text_footer {
-		margin: auto;
-	}
-    .footer h2 {
-    	font-size: 80px;
-    }
-    .footer p {
-    	font-size: 36px;
-    }
-}
+
 
 @media (max-width: 640px) {
 	.footer_main {
@@ -750,12 +767,12 @@ p {
     color: white;
     font-size: 90px;
     font-weight: 700;
-    box-sizing: border-box;
-	display: flex;
+    display: flex;
 	flex-direction: column;
 	width: 100%;
 	align-self: flex-start;
 	margin-bottom: 1.3rem;
+	padding: 2rem;
 }
 
 .footer p {
@@ -774,6 +791,18 @@ p {
 	.footer p {
 		font-size: 14px;
 	}
+}
+
+@media (min-width: 641px) and (max-width: 960px) {
+	.text_footer {
+		margin: auto;
+	}
+    .footer h2 {
+    	font-size: 80px;
+    }
+    .footer p {
+    	font-size: 36px;
+    }
 }
 
 .footer .logo__text {
