--- a/css/main.css
+++ b/css/main.css
@@ -265,8 +265,8 @@ h1 {
 	margin-left: auto;
 	box-sizing: border-box;
 	margin-bottom: 0;
-	width: 40%;
-	padding: 2rem;
+	width: 50%;
+	padding: 0 2rem;
 }
 
 @media (min-width: 641px) and (max-width: 960px) {
@@ -283,9 +283,9 @@ h1 {
 	.athlets {
 		flex-direction: row;
 	}
-	ol {
+	/*ol {
 		margin-right: 25px;
-	}
+	}*/
 }
 
 ol {
@@ -316,7 +316,7 @@ h3 {
 	font-weight: 700;
 	text-transform: uppercase;
     margin: 0;
-    padding: 2rem;
+    padding: 0 2rem;
 }
 
 h3 span {
@@ -341,7 +341,7 @@ p {
 	font-weight: 400;
 	margin-top: 1.5rem;
 	margin-bottom: 0;
-	padding: 2rem;
+	padding: 0 2rem;
 }
 
 .collaboration {
@@ -349,7 +349,7 @@ p {
 }
 
 .athlets article {
-	width: 40%;
+	width: 50%;
 	margin-left: auto;
 	padding: 0;
 	margin-top: 60px;
@@ -376,7 +376,7 @@ p {
 	box-sizing: border-box;
 	margin-bottom: 0;
 	margin-left: 190px;
-	padding: 2rem;
+	padding: 0 2rem;
 }
 
 .players article {
@@ -573,7 +573,7 @@ p {
 	color: #c1c1c1;
 	font-weight: 700;
 	text-transform: uppercase;
-	padding: 2rem;
+	padding: 0 2rem;
 }
 
 .be_active h2 {
@@ -587,7 +587,7 @@ p {
 	font-weight: 400;
 	margin: 0 130px;
 	/*margin-top: 4.5rem;*/
-	padding: 1rem;
+	padding: 0 1rem;
 }
 
 .be_active {
@@ -657,6 +657,7 @@ p {
 		font-size: 16px;
 		margin-top: 1.3rem;
 		margin-bottom: 4rem;
+		padding: 0;
 	}
 	.be_active article, .work_it article, .find_contact article {
 		width: 100%;
@@ -772,7 +773,7 @@ p {
 	width: 100%;
 	align-self: flex-start;
 	margin-bottom: 1.3rem;
-	padding: 2rem;
+	padding: 0;
 }
 
 .footer p {
@@ -782,6 +783,7 @@ p {
 	font-weight: 400;
 	margin-top: 0;
 	text-align: center;
+	padding: 0;
 }
 
 @media (max-width: 640px) {
